--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,21 +1,36 @@
 <div class="login_container" id="main">
-  <div class="login_panel">
-    <div class="panel panel-default card">
-      <div class="panel-heading">
-        <h3 class="panel-title">Please sign in</h3>
-      </div>
-      <div class="panel-body">
-        <div id="alerts"></div>
-        <div data-gohan="error"></div>
-        <form accept-charset="UTF-8" method="" action="" role="form" id="login">
-          <fieldset>
+        <div class="text-center">
+            <a href="#" class="brand">
+                <img class="logo" src="../img/sdn-logo.png">
+            </a>
+        </div>
+        <div class="panel-body content">
+            <div id="alerts"></div>
+            <h3>Login</h3>
+            <hr>
+            <div data-gohan="error"></div>
+            <form class="login-fields" accept-charset="UTF-8" method="" action="" role="form" id="login">
+               <p>Sign in using your registered account:</p>
+            <fieldset>
             <div class="form-group">
-              <input class="form-control" placeholder="ID" name="id" type="text" id="id"></div>
+                     <div class="input-group">
+                         <span class="input-group-addon" ><i class="fa-user"></i></span></span>
+                         <input type="text" class="form-control" name="id" value="" placeholder="Username" id="id" >
+                     </div>
+            </div>
             <div class="form-group">
-              <input class="form-control" placeholder="Password" name="password" id="password" type="password" value=""></div>
-            <input class="btn btn-primary btn-block" data-gohan="login" type="submit" value="Login"></fieldset>
-        </form>
-      </div>
+                     <div class="input-group">
+                         <span class="input-group-addon" ><i class="fa-key"></i></span>
+                         <input class="form-control" name="password" value="" placeholder="Password" id="password" type="password">
+                     </div>
+            </div>
+
+            <div class="form-group">
+            <input class="btn btn-primary btn-mini pull-right" data-gohan="login" autofocus type="submit" value="Sign in">
+            </div>
+            </div>
+            </fieldset>
+
+            </form>
+        </div>
     </div>
-  </div>
-</div>
