--- a/app/templates/table.html
+++ b/app/templates/table.html
@@ -1,13 +1,18 @@
 
-<div class="container-fluid table_search">
-  <div class="row">
+<div class="container-fluid table_search grid-header">
+  <div >
     <div class="col-xs-6 resource_name">
-      <h2><%- schema.title %></h2>
-    </div>
+      <h4 style="margin-left:-15px"; class="modal-header-title grid-header-text smaller blue"><%- schema.title %></h4>
+     </div>
     <div class="col-xs-6 func">
-      <form class="form-inline">
+      <div class="widget-toolbar pull-right">
+             <form class="form-inline">
         <div class="form-group" data-gohan="search">
-        <span>Filter by:</span>
+           <a class="widget-toolbar-icon link-searchbox" title="Search" data-action="search" style="display: inline;" onclick="window.searchExpand()">
+                <i class="fa fa-search"></i>
+           </a>
+            <span class="input-searchbox hide" style="display: inline;">
+              <span>Filter by:</span>
           <select class="form-control" placeholder="Filter By">
             <% schema.schema.propertiesOrder.forEach( function(key){
               var property = schema.schema.properties[key];
@@ -23,18 +28,23 @@
             );
             %>
           </select>
-          <input type="text" class="form-control"  placeholder="Search" value="<%= searchQuery.sortKey %>">
-        </div>
+                <span class="input-icon">
+                    <input type="text" placeholder="Search" class="input-medium input-grid-search form-control search" value="">
+                       <i class="widget-toolbar-icon fa fa-search"></i>
+                </span>
+            </span>
+                    </div>
       </form>
-        <a class="btn btn-primary gohan_create" data-gohan="create">
-            <strong>+</strong> New
-        </a>
+       </div>
+       <!--
+      <div class="widget-toolbar pull-right"><a class="widget-toolbar-icon gohan_delete_selected" disabled ><i class="fa fa-trash"></i></a></div>-->
+      <div class="widget-toolbar pull-right"><a class="widget-toolbar-icon gohan_create" data-gohan="create" ><i class="fa fa-plus"></i></a></div>
     </div>
   </div>
 </div>
 <div data-gohan="error"></div>
 <div class="card">
-  <table class="table table-hover gohan-table">
+  <table class="table table-striped gohan-table">
     <thead>
       <tr>
        <% schema.schema.propertiesOrder.forEach( function(key){
@@ -88,14 +98,15 @@
         <% }); %>
         <td class="action_column">
           <div class="btn-group ">
-          <a class="btn btn-default btn-sm btn-raised btn-material-blue-600" data-id="<%- d['id']%>" data-gohan="update">Edit</a>
-             <button type="button" class="btn btn-default btn-sm dropdown-toggle"
-                data-toggle="dropdown" aria-expanded="true" data-container="body">
-             <span class="caret"></span>
-             <span class="sr-only">Toggle Dropdown</span>
-           </button>
-           <ul class="dropdown-menu pull-right" role="menu" >
-              <li><a data-id="<%- d['id']%>" data-gohan="delete">Delete</a></li>
+               <a data-toggle="dropdown" aria-expanded="true" data-container="body">
+             <i class="fa fa-cog"></i>
+             </a>
+           <!--</button>-->
+           <ul class="dropdown-menu pull-right dropdown-caret grid-action-menu" role="menu" >
+             <li><a class=" gohan_update" data-id="<%- d['id']%>" data-gohan="update">
+          <i class="fa fa-edit margin-right-10"></i>Edit</a></li>
+             <li><a class="gohan_delete" data-id="<%- d['id']%>" data-gohan="delete" >
+          <i class="fa fa-trash-o margin-right-10"></i>Delete</a></li>
            </ul>
           </div>
         </td>
